# UBAS

./: .gitignore  pyproject.toml
UBAS/: __init__.py  main.py
UBAS/estimators/: k_fold_quantile_estimator.py
UBAS/generators/: base_generator.py  benchmark_function_generator.py  central_peak_generator.py  input_generator.py  neural_foil_generator.py  twin_peaks_generator.py
UBAS/plotters/: __init__.py  base_plotter.py
UBAS/regressors/: __init__.py  gaussian_process_quantile_regressor.py  k_fold_quantile_regressor.py  quant_nn.py  quant_nn_regressor.py
UBAS/samplers/: adap_exp_adaptive_sampler.py  adaptive_sampler.py  base_sampler.py  uniform_sampler.py
UBAS/utils/: distance.py  evaluation.py  find_maxima.py  plotting.py  serializable_test.py
docs/: conf.py
docs/source/: UBAS.generators.rst  UBAS.regressors.rst  UBAS.rst  UBAS.samplers.rst  conf.py  examples.generators.rst  examples.rst  index.rst  modules.rst
examples/: ackley_test.py  adap_exp_tests.py  central_peak.py  central_peak_new.py  gpr_test.py  hyperparam_optimization.py  hyperparam_validation.py  linear_vs_logistic.py  moment_coeff_hyperparameter_opt.py  moment_coeff_test.py  nf_generator_test.py  nn_gp.py  optimization_test.py  uniform_sampling_tests.py
projects/2D_central_peak/Adaptive/: performance_data.json  performance_data.pkl  sampler_data.json  sampler_data.pkl
projects/2D_central_peak/Uniform/: performance_data.json  performance_data.pkl  sampler_data.json  sampler_data.pkl
projects/3D_central_peak/Adaptive/: performance_data.json  sampler_data.json  sampler_data.pkl
projects/3D_central_peak/Uniform/: performance_data.json  sampler_data.json  sampler_data.pkl
projects/4D_central_peak/Adaptive/: performance_data.json  sampler_data.pkl
projects/4D_central_peak/Uniform/: performance_data.json  sampler_data.pkl
projects/5D_central_peak/Adaptive/: performance_data.json  (+1 more)
tests/: base_sampler_test.py  benchmark_function_generator_test.py  evaluate_performance_test.py  input_generator_test.py  uniform_sampler_test.py
(+4 files in other folders)
