[project]
name = "ubas"
version = "0.1.0"
description = ""
authors = [
    {name = "arshah2",email = "119633165+arjunrs3@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpydoc (>=1.8.0,<2.0.0)",
    "autodoc (>=0.5.0,<0.6.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "mapie (==0.9.1)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "skorch (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
setuptools = "^75.8.0"

